--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,12 @@ jobs:
       - uses: actions/checkout@v2  # Correct version for checkout
       - name: Run as sample job
         run: echo "This is a sample job running after code checkout"
-      - name : Upload artifact
-        run : actions/upload-artifact@v4.6.0
+
+      - name: Create a sample file
+        run: echo "This is a sample file" > sample.txt
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: sample-artifact
+          path: sample.txt
