--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,11 @@ jobs:
         with:
           name: sample-artifact
           path: sample.txt
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps: 
+      - uses: actions/download-artifact@v4
+        with:
+          name: build=artifact
+          path: ${{github.workspace}}
